examples/test/testpolicy2119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2119
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key44: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value9
      podSelector:
        matchLabels:
          key27: value11
          key40: value12
          key46: value18
